<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/activity_registro">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_registro"
            android:gravity="center"
            android:textSize="25sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/input_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_usuario"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_nombre"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp">
                <EditText
                    android:id="@+id/input_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_numero_telefono"
                    android:inputType="phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_numero_alternativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp">

                <EditText
                    android:id="@+id/input_numero_alternativo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_numero_telefono_alternativo"
                    android:inputType="phone"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/input_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp">

            <RadioButton
                android:padding="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/rb_docente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/radio_docente"/>

            <RadioButton
                android:padding="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/rb_alumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/radio_alumno"/>

            <RadioButton
                android:padding="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/rb_otro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/radio_otro"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:textColor="@color/textColorPrimary"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>